--- a/src/app/pages/rcm-login/rcm-funds/repayments/re-pending/re-pending.component.html
+++ b/src/app/pages/rcm-login/rcm-funds/repayments/re-pending/re-pending.component.html
@@ -1,5 +1,5 @@
-<div class="col-sm-1"></div>
-<div class="col-sm-6" style="margin-left: -31px;">
+<div class="col-sm-1 "></div>
+<div class="col-sm-6 mt-4" style="margin-left: -31px;">
     <!-- Download CSV Button -->
     <button mat-raised-button style="background-color: black; color: white; margin-right: 8px">
         <mat-icon>get_app</mat-icon> Download CSV
