--- a/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
@@ -93,8 +93,7 @@
                     4/11
                 </td>
                 <td class="text-center">
-                    <a style="cursor: pointer; color: cornflowerblue;" (click)="onPermClick()">20/40
-                    </a>
+                    <mat-checkbox></mat-checkbox>
                 </td>
                 <td class="text-center">
                     <a style="cursor: pointer; color: cornflowerblue;" (click)="onPermClick()">20/40
