--- a/src/app/pages/rcm-login/cases/cases.component.html
+++ b/src/app/pages/rcm-login/cases/cases.component.html
@@ -83,7 +83,7 @@
   style="margin-bottom: 10px; padding-right: 25px">
   <!-- Rainbow images  -->
 
-  <div style="display: flex; align-items: center; margin-top: -4.5%">
+  <div *ngIf="isNavOpen" style="display: flex; align-items: center; margin-top: -4.5%">
     <!-- Image Container -->
     <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
       <img src="../../../../assets/rbg.png" class="top-left-image"
@@ -173,7 +173,125 @@
               color: white;
               line-height: 35px;
               gap: 30px;
+              margin-right: 5px;
+            ">45,962</span>
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 7px">
+
+          <mat-icon style="
+              cursor: pointer;
+              margin-right: 7px;
+              background-color: lightgray;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 35px;
+              height: 35px;
+              padding: 18px 15px 12px 15px;
+            "
+            (click)="referralsFilter($event)"
+            >
+            filter_list
+          </mat-icon>
+        </div>
+
+      </div>
+    </mat-card>
+
+  </div>
+
+  <div *ngIf="!isNavOpen" style="display: flex; align-items: center; margin-top: -4.5%">
+    <!-- Image Container -->
+    <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
+      <img src="../../../../assets/rbg.png" class="top-left-image"
+        style="width: 35px; height: 35px; margin-top: -10%; margin-left: 40px" />
+    </div>
+
+
+    <mat-card class="col-sm-10 pull-right" style="
+        height: 35px;
+        background-color: black;
+        margin-top: -1.5%;
+        margin-left: -30px;
+        margin-right: -10px;
+      " *ngIf="showCard">
+      <div fxLayout="row" fxLayoutAlign="start center"
+        style="gap: 30px; padding: 0 10px; display: flex; align-items: center">
+        <div style="display: flex; align-items: center; gap: 10px">
+          <span style="color: white; line-height: 35px; gap: 30px">Referrals</span>
+          <span style="
+              color: white;
+              line-height: 35px;
+              gap: 30px;
               margin-right: 10px;
+            ">120,000</span>
+          <mat-icon style="
+              cursor: pointer;
+              margin-right: 10px;
+              background-color: lightgray;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 35px;
+              height: 35px;
+              padding: 18px 15px 12px 15px;
+            " (click)="toggleTable('table')">
+            {{ showTable ? "expand_less" : "add" }}
+          </mat-icon>
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 10px">
+          <span style="color: white; line-height: 35px">Visits </span>
+          <span style="
+              color: white;
+              line-height: 35px;
+              gap: 30px;
+              margin-right: 10px;
+            ">105,991</span>
+          <mat-icon style="
+              cursor: pointer;
+              margin-right: 10px;
+              background-color: lightgray;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 35px;
+              height: 35px;
+              padding: 18px 15px 12px 15px;
+            " (click)="toggleTable('table1')">
+            {{ showTable1 ? "expand_less" : "add" }}
+          </mat-icon>
+        </div>
+        <div style="display: flex; align-items: center; gap: 10px">
+          <span style="color: white; line-height: 35px">Claims </span>
+          <span style="
+              color: white;
+              line-height: 35px;
+              gap: 30px;
+              margin-right: 10px;
+            ">65,001</span>
+          <mat-icon style="
+              cursor: pointer;
+              margin-right: 10px;
+              background-color: lightgray;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 35px;
+              height: 35px;
+              padding: 18px 15px 12px 15px;
+            " (click)="toggleTable('table2')">
+            {{ showTable2 ? "expand_less" : "add" }}
+          </mat-icon>
+        </div>
+        <div style="display: flex; align-items: center; gap: 10px">
+          <span style="color: white; line-height: 35px">Paid</span>
+          <span style="
+              color: white;
+              line-height: 35px;
+              gap: 30px;
+              margin-right: 5px;
             ">45,962</span>
         </div>
 
@@ -202,22 +320,24 @@
   </div>
 
 
+
   <div *ngIf="showTable" @slideIn style="margin-left: 25.4%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Referral vs. Visits</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource; let i = index">
+          <tr *ngFor="let user of dataSource; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/referrals']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
@@ -229,39 +349,41 @@
       <h4>Gap Analysis - Visits vs. Claims</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource1; let i = index">
+          <tr *ngFor="let user of dataSource1; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/visits']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 
-  <div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content">
+  <div *ngIf="showTable2" @slideIn style="margin-left: 66.4%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Claims vs. Paid</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource2; let i = index">
+          <tr *ngFor="let user of dataSource2; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/claims']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
@@ -271,9 +393,9 @@
 
   
 
-  <div class="col-sm-12 mb-3" style="width: 103.6%;">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-3" style="text-align: right;">
+  <div class="col-sm-12 mb-3 mt-4" style="width: 103.6%;">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-4" style="text-align: right;">
       <p *ngIf="selectedIcon !== null" class="mt-2 tooltipName">
         <span style="color: #A6A6A6;">{{ icons[selectedIcon].tooltip }}</span>
       </p>
