--- a/src/app/pages/rcm-login/entities/entities.component.scss
+++ b/src/app/pages/rcm-login/entities/entities.component.scss
@@ -106,3 +106,16 @@
 .toggle-icon {
     font-size: 40px;
 }
+
+
+
+.dropdown-content {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    margin-top: 0px;
+    padding: 10px;
+    width: 31%;
+    position: absolute;
+    z-index: 10;
+  }
