--- a/src/app/pages/rcm-login/entities/law-firm/law-firm.component.html
+++ b/src/app/pages/rcm-login/entities/law-firm/law-firm.component.html
@@ -1,12 +1,12 @@
-
-<div style="display: flex; align-items: center; margin-top: -4.5%">
-    <!-- Image Container -->
-    <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
+<!-- 
+<div style="display: flex; align-items: center;margin-left: 13%; margin-top: -4.5%">
+   
+    <div class="col-sm-2" style="  cursor: pointer" (click)="toggleCard()">
       <img src="../../../../assets/rbg.png" class="top-left-image"
-        style="width: 35px; height: 35px; margin-top: -18%; margin-left: 40px" />
+        style="width: 35px; height: 35px; margin-top: -20%; margin-left: 40px" />
     </div>
-
-
+  
+  
     <mat-card class="col-sm-10 pull-right" style="
         height: 35px;
         background-color: black;
@@ -22,11 +22,11 @@
               color: white;
               line-height: 35px;
               gap: 30px;
-              margin-right: 10px;
+              margin-right: 4px;
             ">120,000</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: -1px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -38,7 +38,7 @@
             {{ showTable ? "expand_less" : "add" }}
           </mat-icon>
         </div>
-
+  
         <div style="display: flex; align-items: center; gap: 10px">
           <span style="color: white; line-height: 35px">Visits </span>
           <span style="
@@ -49,7 +49,7 @@
             ">105,991</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: 5px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -71,7 +71,7 @@
             ">65,001</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: 6px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -89,12 +89,12 @@
               color: white;
               line-height: 35px;
               gap: 30px;
-              margin-right: 10px;
+              margin-right: 2px;
             ">45,962</span>
         </div>
-
+  
         <div style="display: flex; align-items: center; gap: 7px">
-
+  
           <mat-icon style="
               cursor: pointer;
               margin-right: 7px;
@@ -111,14 +111,14 @@
             filter_list
           </mat-icon>
         </div>
-
+  
       </div>
     </mat-card>
-
+  
   </div>
-
-
-  <div *ngIf="showTable" @slideIn style="margin-left: 25.4%" class="dropdown-content">
+  
+  
+  <div *ngIf="showTable" @slideIn style="margin-left: 24%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Referral vs. Visits</h4>
       <table matSort class="table table-bordered table-hover">
@@ -139,7 +139,7 @@
       </table>
     </div>
   </div>
-
+  
   <div *ngIf="showTable1" @slideIn style="margin-left: 45%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Visits vs. Claims</h4>
@@ -161,8 +161,8 @@
       </table>
     </div>
   </div>
-
-  <div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content">
+  
+  <div *ngIf="showTable2" @slideIn style="margin-left: 63.8%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Claims vs. Paid</h4>
       <table matSort class="table table-bordered table-hover">
@@ -182,15 +182,15 @@
         </tbody>
       </table>
     </div>
-  </div>
+  </div> -->
 
 
 
 
 
-<div class="col-sm-12 mb-3">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-3" style="text-align: right;">
+<div class="col-sm-12 mb-3 mt-4">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-4" style="text-align: right;">
         <p *ngIf="selectedIcon !== null" class="mt-2 tooltipName">
             <span style="color: #A6A6A6;">{{ icons[selectedIcon].tooltip }}</span>
         </p>
