--- a/src/app/pages/rcm-login/patients/patients.component.html
+++ b/src/app/pages/rcm-login/patients/patients.component.html
@@ -1,9 +1,7 @@
 
-
-
-<div style="display: flex; align-items: center; margin-top:-3.5%">
+<div  style="display: flex; align-items: center; margin-top:-3.5%">
   <!-- Image Container -->
-  <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
+  <div class="col-sm-2" style="margin-left: 10%;  cursor: pointer" (click)="toggleCard()">
     <img src="../../../../assets/rbg.png" class="top-left-image"
       style="width: 35px; height: 35px; margin-top: -18%; margin-left: 40px" />
   </div>
@@ -14,7 +12,7 @@
       background-color: black;
       margin-top: -2.5%;
       margin-left: -30px;
-      margin-right: -10px;
+      margin-right: 27px;
     " *ngIf="showCard">
     <div fxLayout="row" fxLayoutAlign="start center"
       style="gap: 30px; padding: 0 10px; display: flex; align-items: center">
@@ -120,22 +118,23 @@
 </div>
 
 
-<div *ngIf="showTable" @slideIn style="margin-left: 25.4%" class="dropdown-content">
+<div *ngIf="showTable" @slideIn style="margin-left: 22.5%" class="dropdown-content">
   <div id="grid-table-container" class="table-responsive">
     <h4>Gap Analysis - Referral vs. Visits</h4>
     <table matSort class="table table-bordered table-hover">
       <tbody>
-        <tr *ngFor="let user of dataSource; let i = index">
+        <tr *ngFor="let user of dataSource; let i = index;let last = last">
           <td [ngStyle]="{
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
             }">
             {{ user.workList }}
           </td>
           <td [ngStyle]="{
-              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-            }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/referrals']">
-            {{ user.volume }}
-          </td>
+            'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+            'color': last ? 'black' : 'blue'
+          }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+          {{ user.volume }}
+        </td>
         </tr>
       </tbody>
     </table>
@@ -147,39 +146,41 @@
     <h4>Gap Analysis - Visits vs. Claims</h4>
     <table matSort class="table table-bordered table-hover">
       <tbody>
-        <tr *ngFor="let user of dataSource1; let i = index">
+        <tr *ngFor="let user of dataSource1; let i = index;let last = last">
           <td [ngStyle]="{
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
             }">
             {{ user.workList }}
           </td>
           <td [ngStyle]="{
-              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-            }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/visits']">
-            {{ user.volume }}
-          </td>
+            'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+            'color': last ? 'black' : 'blue'
+          }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+          {{ user.volume }}
+        </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
 
-<div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content">
+<div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content ">
   <div id="grid-table-container" class="table-responsive">
     <h4>Gap Analysis - Claims vs. Paid</h4>
     <table matSort class="table table-bordered table-hover">
       <tbody>
-        <tr *ngFor="let user of dataSource2; let i = index">
+        <tr *ngFor="let user of dataSource2; let i = index;let last = last">
           <td [ngStyle]="{
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
             }">
             {{ user.workList }}
           </td>
           <td [ngStyle]="{
-              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-            }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/claims']">
-            {{ user.volume }}
-          </td>
+            'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+            'color': last ? 'black' : 'blue'
+          }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+          {{ user.volume }}
+        </td>
         </tr>
       </tbody>
     </table>
@@ -193,7 +194,7 @@
 
 <div class="col-sm-12 mb-3 mt-4">
   <div class="col-sm-5"></div>
-  <div class="col-sm-1" style="text-align: right;">
+  <div class="col-sm-2" style="text-align: right;">
     <p *ngIf="selectedIcon !== null" class="mt-2 tooltipName">
       <span style="color: #A6A6A5;">{{ icons[selectedIcon].tooltip }}</span>
     </p>
