--- a/src/app/pages/rcm-login/patients/patients.component.scss
+++ b/src/app/pages/rcm-login/patients/patients.component.scss
@@ -216,4 +216,10 @@ h4 {
     width: 31%;
     position: absolute;
     z-index: 10;
+    
   }
+
+  .remove-box-shadow {
+    box-shadow: none !important;
+  }
+  
