--- a/src/app/pages/rcm-login/rcm-case-manager/rcm-case-manager.component.html
+++ b/src/app/pages/rcm-login/rcm-case-manager/rcm-case-manager.component.html
@@ -1,11 +1,9 @@
 
+<!-- <div style="display: flex; align-items: center;margin-left: 15%; margin-top: -4.5%">
 
-
-<div style="display: flex; align-items: center; margin-top: -4.5%">
-    <!-- Image Container -->
-    <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
+    <div class="col-sm-2" style="  cursor: pointer" (click)="toggleCard()">
       <img src="../../../../assets/rbg.png" class="top-left-image"
-        style="width: 35px; height: 35px; margin-top: -18%; margin-left: 40px" />
+        style="width: 35px; height: 35px; margin-top: -20%; margin-left: 40px" />
     </div>
 
 
@@ -13,9 +11,9 @@
         height: 35px;
         background-color: black;
         margin-top: -2.5%;
-        margin-left: -30px;
-        margin-right: -10px;
-      " *ngIf="showCard">
+        margin-left: -19px;c
+        margin-right: -10px;" 
+        *ngIf="showCard">
       <div fxLayout="row" fxLayoutAlign="start center"
         style="gap: 30px; padding: 0 10px; display: flex; align-items: center">
         <div style="display: flex; align-items: center; gap: 10px">
@@ -24,11 +22,11 @@
               color: white;
               line-height: 35px;
               gap: 30px;
-              margin-right: 10px;
+              margin-right: 4px;
             ">120,000</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: -1px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -51,7 +49,7 @@
             ">105,991</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: 5px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -73,7 +71,7 @@
             ">65,001</span>
           <mat-icon style="
               cursor: pointer;
-              margin-right: 10px;
+              margin-right: 6px;
               background-color: lightgray;
               display: flex;
               align-items: center;
@@ -91,7 +89,7 @@
               color: white;
               line-height: 35px;
               gap: 30px;
-              margin-right: 10px;
+              margin-right: 2px;
             ">45,962</span>
         </div>
 
@@ -120,22 +118,23 @@
   </div>
 
 
-  <div *ngIf="showTable" @slideIn style="margin-left: 25.4%" class="dropdown-content">
+  <div *ngIf="showTable" @slideIn style="margin-left: 26.5%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Referral vs. Visits</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource; let i = index">
+          <tr *ngFor="let user of dataSource; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/referrals']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
@@ -147,44 +146,46 @@
       <h4>Gap Analysis - Visits vs. Claims</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource1; let i = index">
+          <tr *ngFor="let user of dataSource1; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/visits']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 
-  <div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content">
+  <div *ngIf="showTable2" @slideIn style="margin-left: 64.8%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Claims vs. Paid</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource2; let i = index">
+          <tr *ngFor="let user of dataSource2; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/claims']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
     </div>
-  </div>
+  </div> -->
 
 
 
@@ -192,7 +193,7 @@
 
 
 
-<div class="col-sm-12">
+<div class="col-sm-12 mt-4">
     <button mat-raised-button style="background-color: black; color:white;" class="pull-right"
         (click)="filterToggle = !filterToggle">
         <mat-icon>filter_list</mat-icon> Filter
