--- a/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.html
+++ b/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.html
@@ -1,7 +1,7 @@
-
-<div style="display: flex; align-items: center; margin-top: -4.5%">
-    <!-- Image Container -->
-    <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
+<!-- 
+<div style="display: flex; align-items: center;margin-left: 10%;  margin-top: -4.5%">
+   
+    <div class="col-sm-2" style=" cursor: pointer" (click)="toggleCard()">
       <img src="../../../../assets/rbg.png" class="top-left-image"
         style="width: 35px; height: 35px; margin-top: -18%; margin-left: 40px" />
     </div>
@@ -11,7 +11,7 @@
         height: 35px;
         background-color: black;
         margin-top: -2.5%;
-        margin-left: -30px;
+        margin-left: -25px;
         margin-right: -10px;
       " *ngIf="showCard">
       <div fxLayout="row" fxLayoutAlign="start center"
@@ -118,22 +118,25 @@
   </div>
 
 
-  <div *ngIf="showTable" @slideIn style="margin-left: 25.4%" class="dropdown-content">
+
+
+  <div *ngIf="showTable" @slideIn style="margin-left: 21.8%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Referral vs. Visits</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource; let i = index">
+          <tr *ngFor="let user of dataSource; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/referrals']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
@@ -145,44 +148,46 @@
       <h4>Gap Analysis - Visits vs. Claims</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource1; let i = index">
+          <tr *ngFor="let user of dataSource1; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/visits']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 
-  <div *ngIf="showTable2" @slideIn style="margin-left: 66%" class="dropdown-content">
+  <div *ngIf="showTable2" @slideIn style="margin-left: 64%" class="dropdown-content">
     <div id="grid-table-container" class="table-responsive">
       <h4>Gap Analysis - Claims vs. Paid</h4>
       <table matSort class="table table-bordered table-hover">
         <tbody>
-          <tr *ngFor="let user of dataSource2; let i = index">
+          <tr *ngFor="let user of dataSource2; let i = index;let last = last">
             <td [ngStyle]="{
                 'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
               }">
               {{ user.workList }}
             </td>
             <td [ngStyle]="{
-                'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9'
-              }" style="color: blue; cursor: pointer" [routerLink]="['/rcm-login/claims']">
-              {{ user.volume }}
-            </td>
+              'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
+              'color': last ? 'black' : 'blue'
+            }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
+            {{ user.volume }}
+          </td>
           </tr>
         </tbody>
       </table>
     </div>
-  </div>
+  </div> -->
 
 
 
@@ -191,7 +196,7 @@
 
 
 <!-- Perspective Mat-Icons -->
-<div class="col-sm-12 mb-3">
+<div class="col-sm-12 mb-3 mt-4">
     <div class="col-sm-5"></div>
     <div class="col-sm-3" style="text-align: right;">
         <p *ngIf="selectedIcon !== null" class="mt-2 tooltipName">
@@ -225,6 +230,37 @@
             </div>
         </mat-card>
     </div>
+</div>
+
+<div class="arrow-container" *ngIf="selectedIcon === 0">
+  <div class="arrow-shape" style="background-color: #C4C2FF; color: black;">
+    <span class="arrow-text">Pending Verification</span>
+    <span class="arrow-number">42,981</span>
+  </div>
+  <div class="arrow-shape" style="background-color: #B3E3F6; color: black;">
+    <span class="arrow-text">Pending Authorization</span>
+    <span class="arrow-number">40,897</span>
+  </div>
+  <div class="arrow-shape" style="background-color: #E0DBFF; color: black;">
+    <span class="arrow-text">SCH & Pending AUTH</span>
+    <span class="arrow-number">32,781</span>
+  </div>
+
+  <div class="arrow-shape" style="background-color: #D9D9D9; color: black;">
+    <span class="arrow-text">Scheduled Today</span>
+    <span class="arrow-number">9891</span>
+  </div>
+
+  <div class="arrow-shape" style="background-color: #FFD2B2; color: black;">
+    <span class="arrow-text">AUTH & Pending SCH</span>
+    <span class="arrow-number">981</span>
+  </div>
+
+  <div class="arrow-shape" style="background-color: #A8E5C1; color: black;">
+    <span class="arrow-text">Scheduling Overdue</span>
+    <span class="arrow-number">741</span>
+  </div>
+
 </div>
 
 
