--- a/src/app/pages/rcm-login/rcm-funds/payments/pending/pending.component.html
+++ b/src/app/pages/rcm-login/rcm-funds/payments/pending/pending.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-6" style="margin-left: -20px;">
+<div class="col-sm-6 mt-4" style="margin-left: -20px;">
     <!-- Download CSV Button -->
     <button mat-raised-button style="background-color: black; color: white; margin-right: 8px">
         <mat-icon>get_app</mat-icon> Download CSV
