--- a/src/app/pages/rcm-login/rcm-funds/repayments/repayments.component.html
+++ b/src/app/pages/rcm-login/rcm-funds/repayments/repayments.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-5" style="margin-left: -10px; margin-bottom: 10px;">
+<div class="col-sm-5 mt-4" style="margin-left: -10px; margin-bottom: 10px;">
     <div class="pills">
         <ul class="nav nav-pills" style="margin-left: 10px;">
             <li routerLinkActive="active" [routerLink]="['pending']">
